force-app/main/default/objects/CLM_Sequence__c/CLM_Sequence__c.object-meta.xml
<CustomObject>
    <label>CLM Sequence</label>
    <nameField>
        <label>Sequence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CLM Sequences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>