force-app/main/default/objects/CLM_Sequence__c/fields/CLM_Presentation__c.field-meta.xml
<CustomField>
    <fullName>CLM_Presentation__c</fullName>
    <label>CLM Presentation</label>
    <referenceTo>CLM_Presentation__c</referenceTo>
    <relationshipLabel>CLM Sequences</relationshipLabel>
    <relationshipName>CLM_Sequences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>