force-app/main/default/objects/CLM_Sequence__c/fields/HTML_Entry_Point__c.field-meta.xml
<CustomField>
    <fullName>HTML_Entry_Point__c</fullName>
    <label>HTML Entry Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>