force-app/main/default/objects/CLM_Sequence__c/fields/Message_Names__c.field-meta.xml
<CustomField>
    <fullName>Message_Names__c</fullName>
    <label>Message Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>