force-app/main/default/objects/CLM_Sequence__c/fields/Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Name__c</fullName>
    <label>Sequence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>