force-app/main/default/objects/CLM_Sequence__c/fields/Slide_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Slide_Image_URL__c</fullName>
    <label>Slide Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>