force-app/main/default/objects/CLM_Sequence__c/fields/Thumbnail_Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Content_Version_Id__c</fullName>
    <label>Thumbnail Content Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>